crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__prefix_ids__prefix_ids-2.snap
---
source: crates/oxvg_optimiser/src/jobs/prefix_ids.rs
expression: "test_config(r#\"{ \"prefixIds\": {\n            \"prefix\": \"prefixIds_02_svg_txt\"\n        } }\"#,\nSome(r#\"<svg width=\"120\" height=\"120\" xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- prefix attribute url -->\n    <defs>\n        <linearGradient id=\"MyGradient\">\n            <stop offset=\"5%\" stop-color=\"green\"/>\n            <stop offset=\"95%\" stop-color=\"gold\"/>\n        </linearGradient>\n    </defs>\n    <rect fill=\"url(#MyGradient)\" x=\"10\" y=\"10\" width=\"100\" height=\"100\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" width="120" height="120">
    <!-- prefix attribute url -->
    <defs>
        <linearGradient id="prefixIds_02_svg_txt__MyGradient">
            <stop offset="5%" stop-color="green"/>
            <stop offset="95%" stop-color="gold"/>
        </linearGradient>
    </defs>
    <rect fill="url(#prefixIds_02_svg_txt__MyGradient)" x="10" y="10" width="100" height="100"/>
</svg>
