crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__prefix_ids__prefix_ids-6.snap
---
source: crates/oxvg_optimiser/src/jobs/prefix_ids.rs
expression: "test_config(r#\"{ \"prefixIds\": {\n            \"prefix\": \"prefixIds_06_svg_txt\"\n        } }\"#,\nSome(r#\"<svg width=\"120\" height=\"120\" xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Prefix multiple idents per attr/selector -->\n    <style>\n        .test {\n            color: blue;\n        }\n        .test2 {\n            color: green;\n        }\n        #test {\n            color: red;\n        }\n        .test3 .test4 {\n            color: black;\n        }\n        .test5.test6 {\n            color: brown;\n        }\n        .test5.test6 #test7 {\n            color: yellow;\n        }\n    </style>\n    <rect class=\"test\" x=\"10\" y=\"10\" width=\"100\" height=\"100\"/>\n    <rect class=\"test test2\" x=\"10\" y=\"10\" width=\"100\" height=\"100\"/>\n    <rect class=\"test  test2\" x=\"10\" y=\"10\" width=\"100\" height=\"100\"/>\n    <rect class=\"\" id=\"test\" x=\"10\" y=\"10\" width=\"100\" height=\"100\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" width="120" height="120">
    <!-- Prefix multiple idents per attr/selector -->
    <style>
        .prefixIds_06_svg_txt__test{color:#00f}.prefixIds_06_svg_txt__test2{color:green}#prefixIds_06_svg_txt__test{color:red}.prefixIds_06_svg_txt__test3 .prefixIds_06_svg_txt__test4{color:#000}.prefixIds_06_svg_txt__test5.prefixIds_06_svg_txt__test6{color:brown}.prefixIds_06_svg_txt__test5.prefixIds_06_svg_txt__test6 #prefixIds_06_svg_txt__test7{color:#ff0}
    </style>
    <rect class="prefixIds_06_svg_txt__test" x="10" y="10" width="100" height="100"/>
    <rect class="prefixIds_06_svg_txt__test prefixIds_06_svg_txt__test2" x="10" y="10" width="100" height="100"/>
    <rect class="prefixIds_06_svg_txt__test prefixIds_06_svg_txt__test2" x="10" y="10" width="100" height="100"/>
    <rect class="" id="prefixIds_06_svg_txt__test" x="10" y="10" width="100" height="100"/>
</svg>
